<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>Wicked-Proxy</artifactId>
        <groupId>org.catas</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>gui</artifactId>

    <dependencies>
        <dependency>
            <groupId>org.catas</groupId>
            <artifactId>proxy-server</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>io.micronaut</groupId>
                    <artifactId>micronaut-runtime</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.micronaut</groupId>
                    <artifactId>micronaut-http-server-netty</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.graalvm.nativeimage</groupId>
            <artifactId>svm</artifactId>
            <version>22.3.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.lz4</groupId>
            <artifactId>lz4-java</artifactId>
            <version>1.8.0</version>
        </dependency>

    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>com.catas.wicked.proxy.WickedProxyApplication</mainClass>
                    <options>
                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/javafx.scene.control=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
                        <option>--add-opens</option>
                        <option>java.base/java.lang.reflect=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.scene.control.skin=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED</option>

                        <!-- system proxy -->
                        <option>-Djava.net.useSystemProxies=true</option>
                    </options>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>com.catas.wicked.proxy.WickedProxyApplication</mainClass>
                    <linkerArgs>
                        <!-- <arg>management_ext.lib</arg> -->
                        <!-- <arg>psapi.lib</arg> -->
                    </linkerArgs>
                    <graalvmHome>/Library/Java/JavaVirtualMachines/graalvm-svm-java17-darwin-m1-gluon-22.1.0.1-Final/Contents/Home</graalvmHome>
                    <!-- <graalvmHome>/Library/Java/JavaVirtualMachines/graalvm-java23-darwin-aarch64-gluon-23+25.1-dev/Contents/Home</graalvmHome> -->
                    <reflectionList>com.catas.wicked.proxy.WickedProxyApplication</reflectionList>
                    <nativeImageArgs>
                        <arg>-H:+JNI</arg>
                        <arg>-H:ExcludeResources='.*/libjnidispatch.a'</arg>
                        <arg>--allow-incomplete-classpath</arg>
                        <arg>--initialize-at-build-time=org.slf4j.LoggerFactory</arg>
                        <arg>--initialize-at-build-time=org.slf4j.jul.JDK14LoggerAdapter</arg>

                        <arg>--initialize-at-build-time=com.sun.beans.introspect.ClassInfo</arg>
                        <arg>--initialize-at-build-time=java.beans.Introspector</arg>

                        <arg>--initialize-at-run-time=io.netty.buffer.UnpooledByteBufAllocator$InstrumentedUnpooledUnsafeNoCleanerDirectByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.UnpooledByteBufAllocator</arg>
                        <arg>--trace-class-initialization=io.netty.buffer.UnpooledByteBufAllocator</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.PooledSlicedByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.PooledByteBufAllocator</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.PooledUnsafeDirectByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.AbstractReferenceCountedByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.ByteBufUtil</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.PooledByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.ByteBufAllocator</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.AbstractPooledDerivedByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.UnpooledUnsafeNoCleanerDirectByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.UnpooledHeapByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.UnpooledDirectByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.UnpooledUnsafeDirectByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.PooledSlicedByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.PooledUnsafeDirectByteBuf</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.Unpooled</arg>
                        <arg>--initialize-at-run-time=io.netty.buffer.AbstractReferenceCountedByteBuf</arg>


                        <arg>--initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger</arg>
                        <arg>--initialize-at-run-time=io.netty.util.AbstractReferenceCounted</arg>

                        <arg>--initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.OpenSslAsyncPrivateKeyMethod</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.ConscryptAlpnSslEngine</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.JettyNpnSslEngine</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.OpenSslPrivateKeyMethod</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.PemPrivateKey</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.PemValue</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.OpenSsl</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.codec.http.HttpObjectAggregator</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.codec.ReplayingDecoderByteBuf</arg>

                        <arg>--initialize-at-run-time=io.netty.internal.tcnative.SSLPrivateKeyMethod</arg>
                        <arg>--initialize-at-run-time=io.netty.internal.tcnative.CertificateCompressionAlgo</arg>
                        <arg>--initialize-at-run-time=io.netty.internal.tcnative.CertieVerifier</arg>
                        <arg>--initialize-at-run-time=io.netty.internal.tcnative.SSL</arg>
                        <arg>--initialize-at-run-time=io.netty.internal.tcnative.yncSSLPrivateKeyMethod</arg>
                        <arg>--initialize-at-run-time=io.netty.internal.tcnativtificateCompressionAlgo</arg>
                        <arg>--initialize-at-run-time=io.netty.internal.tcnative.AsyncSSLPrivateKeyMethod</arg>
                        <arg>--initialize-at-run-time=io.netty.internal.tcnative.CertificateVerifier</arg>

                        <arg>--initialize-at-build-time=io.netty.util.internal.logging.Slf4JLoggerFactory</arg>
                        <arg>--initialize-at-build-time=io.netty.channel.MultithreadEventLoopGroup</arg>
                        <arg>--initialize-at-build-time=io.netty.util.internal.logging.InternalLoggerFactory</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.DefaultFileRegion</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.epoll.Native</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.epoll.Epoll</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.epoll.EpollEventLoop</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.epoll.EpollEventArray</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.kqueue.KQueue</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.kqueue.KQueueEventLoop</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.kqueue.KQueueEventArray</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.kqueue.Native</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.unix.Limits</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.unix.Errors</arg>
                        <arg>--initialize-at-run-time=io.netty.channel.unix.IovArray</arg>
                        <arg>--initialize-at-run-time=io.netty.handler.ssl.BouncyCastleAlpnSslUtils</arg>
                        <arg>--initialize-at-run-time=io.netty.incubator.codec.quic.InsecureQuicTokenHandler</arg>
                        <arg>--initialize-at-run-time=io.netty.incubator.codec.quic.SecureRandomQuicConnectionIdGenerator</arg>
                        <!-- <arg></arg> -->

                    </nativeImageArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.plugin.version}</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib</classpathPrefix>
                            <mainClass>com.catas.wicked.proxy.WickedProxyApplication</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Class-path>./</Class-path>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plgin.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut</groupId>
                            <artifactId>micronaut-inject-java</artifactId>
                            <version>${micronaut.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Amicronaut.processing.group=org.catas</arg>
                        <!-- <arg>-Amicronaut.processing.module=hellofx</arg> -->
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.sureplugin.version}</version>
                <configuration>
                    <skip>true</skip>
                    <classpathDependencyExcludes>org.graalvm.nativeimage</classpathDependencyExcludes>
                    <argLine>-ea</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven.dependency.plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <type>jar</type>
                            <includeTypes>jar</includeTypes>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>*.*</include>
                    <include>**/*.*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
    </build>
</project>